--- a/auth-api/package.json
+++ b/auth-api/package.json
@@ -10,7 +10,7 @@
     "predevelop": "npm run build",
     "develop": "npx tsc -w & nodemon dist/src/index.js",
     "token:cleanup": "ts-node src/scripts/revoked-token-cleanup.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +33,7 @@
     "winston": "^3.9.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.3",
     "jest": "^29.6.0",
     "prettier": "^3.0.0",
     "supertest": "^6.3.3",
