--- a/auth-api/package.json
+++ b/auth-api/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.6.0",
     "prettier": "^3.0.0",
     "supertest": "^6.3.3",
